feat: ajout fonctionnalitÃ© Affiches avec OCR
- Installation de tesseract.js pour OCR cÃ´tÃ© client
- CrÃ©ation du type Affiche pour les Ã©tiquettes
- Service OCRService avec extraction et parsing automatique
- Composant AfficheScanner avec flux camÃ©ra en 4 Ã©tapes
- Page Affiches avec liste, recherche et copie EAN
- IntÃ©gration dans le menu et routing
- Photos temporaires (supprimÃ©es aprÃ¨s OCR)
- Extraction automatique: dÃ©signation, poids, prix, prix/kg

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.2.0",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
