Refactor: remplacement gestion manuelle camÃ©ra par react-webcam pour rÃ©soudre re-renders infinis

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-webcam": "^7.2.0",
     "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
