feat: intÃ©gration Shadcn UI + Tremor - composants de base et page de test

--- a/package.json
+++ b/package.json
@@ -16,16 +16,24 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@tremor/react": "^3.18.7",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^10.8.0",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-barcode-reader": "^0.0.2",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
